---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: ????
  Changes:
    - [item=simple-gauge] Move to circuit-input subgroup if SchallCircuitGroup is installed.