@@ -1,2 +1,5 @@
 -- Better subgroup placement with SchallCircuitGroup
 require("data-updates.schall-circuit-group")
+
+-- Optionally unlock with Fluid Handling or Steam Power
+require("data-updates.unlock-with-tech")
