@@ -1,0 +1,13 @@
+[mod-setting-name]
+simple-gauge-tweaks-unlock=Unlock simple gauge with
+
+[mod-setting-description]
+simple-gauge-tweaks-unlock=The technology that must be researched in order for the simple gauge to be unlocked.
+
+[string-mod-setting]
+simple-gauge-tweaks-unlock-with-fluid-handling=Fluid Handling
+simple-gauge-tweaks-unlock-with-steam-power=Steam Power
+
+[string-mod-setting-description]
+simple-gauge-tweaks-unlock-with-fluid-handling=Unlock with Fluid Handling.
+simple-gauge-tweaks-unlock-with-steam-power=Unlock very early on with Steam Power.
